# gum-primitives

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  gum-cmake-gen.conf  rebuild.sh  run.sh
examples/: CMakeLists.txt
src/: CMakeLists.txt  Config.cmake.in  gum-primitives.h
src/Primitives/: Bone.cpp  Bone.h  Curve.cpp  Curve.h  Mesh.cpp  Mesh.h  SkeletalAnimation.cpp  SkeletalAnimation.h  Transformable.cpp  Transformable.h  UniqueID.cpp  UniqueID.h  Vertex.h
src/Primitives/MeshGenerators/: Arc.cpp  Capsule.cpp  Cube.cpp  Cylinder.cpp  Disc.cpp  Line.cpp  Plane.cpp  Pyramid.cpp  Sphere.cpp  UVSphere.cpp
